# k8s-piper

./: .gitignore  =8.0  README.md  pyproject.toml
.github/workflows/: publish.yml
k8s_piper/: __init__.py  __main__.py  _version.py  cert_analyzer.py  cli.py  display.py  k8s_manifest.py  rbac_analyzer.py  workload_analyzer.py
tests/: conftest.py  test_cert_analyzer.py  test_cli.py  test_display.py  test_k8s_manifest.py  test_rbac_analyzer.py  test_workload_analyzer.py
